<resources>
    <string name="app_name">Story App</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="hai_coders">welcome</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="welcome_coders">Welcome!</string>
    <string name="login_success">Login success</string>
    <string name="error_message">There\'s an error: %1$s</string>
    <string name="language">Language</string>
    <string name="photo_story">Story\'s photo</string>
    <string name="favorite">Favorite</string>
    <string name="add_story">Add Story</string>
    <string name="save_to_favorite">Save to Favorites</string>
    <string name="logout">Log out</string>
    <string name="logout_success">Log out success, redirect to login page</string>
    <string name="camera">Camera</string>
    <string name="galery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="please_add_photo">Please add photo</string>
    <string name="upload_success">Upload story success</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">No data</string>
    <string name="story">Story</string>
    <string name="story_photo_description">Foto cerita yang akan diupload</string>
    <string name="email_format_not_valid">Format email tidak sesuai!</string>
    <string name="password_less_than_8_chars">Password kurang dari 8 karakter!</string>
    <string name="locations">Lokasi</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="allow_access_location">Izinkan mencatat lokasi saat ini</string>
    <string name="permissions_not_granted">Tidak mendapatkan izin</string>
    <string name="retry">Coba lagi</string>
    <string name="timeout">Timeout</string>
</resources>